--- a/about.html
+++ b/about.html
@@ -81,20 +81,36 @@
             text-align: center;
             padding: 2rem 0;
         }
+    /* Custom Styles */
+.navbar {
+    background: rgba(0, 0, 0, 0.5); /* Transparent background */
+}
+
+.nav-link {
+    color: white; /* Custom text color */
+    transition: color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.nav-link:hover {
+    color: #ffcc00; /* Custom hover color */
+}
+
     </style>
 </head>
 <body>
-    <header class="bg-gray-900 text-white p-4 text-center">
-        <nav class="container mx-auto">
-            <ul class="flex justify-center space-x-8">
-                <li><a href="inndex.html" class="hover:text-gray-300">Home</a></li>
-                <li><a href="about.html" class="hover:text-gray-300">About Me</a></li>
-                <li><a href="#responsibilities" class="hover:text-gray-300">Responsibilities</a></li>
-                <li><a href="#achievements" class="hover:text-gray-300">Achievements</a></li>
-                <li><a href="#education" class="hover:text-gray-300">Education</a></li>
-                <li><a href="#contact" class="hover:text-gray-300">Contact</a></li>
-            </ul>
+    <header class="">
+        <nav class="navbar fixed top-0 left-0 w-full z-50">
+            <div class="container mx-auto flex justify-between items-center py-4 px-6">
+                <a href="#" class="italic text-2xl font-bold text-white">Riyed Ahmmed</a>
+                <ul class="flex space-x-6">
+                    <li><a href="inndex.html" class="nav-link">Home</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
+                    <li><a href="projec.html" class="nav-link">Projects</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
+                </ul>
+            </div>
         </nav>
+        
     </header>
 
 
